[package]
name = "psutil"
version = "1.7.0"
authors = ["Sam Clements <sam@borntyping.co.uk>"]
description = "Process and system monitoring library"
repository = "https://github.com/borntyping/rust-psutil"
readme = "README.md"
license = "MIT"
edition = "2018"

[dependencies]
# nix = "0.16.1"
nix = { git = "https://github.com/nix-rust/nix", branch = "master" }
once_cell = "1.2.0"
cfg-if = "0.1.10"

num_cpus = { version = "1.11.1", optional = true }
platforms = { version = "0.2.1", optional = true }
snafu = { version = "0.6.0", optional = true }
signal = { version = "0.7.0", optional = true }
glob = { version = "0.3.0", optional = true }

[target.'cfg(target_os = "macos")'.dependencies]
mach = { version = "0.3.2", optional = true }

[features]
default = ["cpu", "disk", "host", "memory", "network", "process", "sensors"]

# Modules
cpu = ["num_cpus", "mach"]
disk = []
host = ["platforms"]
memory = []
network = []
process = ["snafu", "memory"]
sensors = ["glob"]

[dev-dependencies]
float-cmp = "0.6.0"
