[package]
name = "psutil"
version = "2.0.0"
authors = ["Caleb Bassi <calebjbassi@gmail.com>", "Rob Day <rkd@rkd.me.uk>", "Sam Clements <sam@borntyping.co.uk>"]
description = "Process and system monitoring library"
repository = "https://github.com/rust-psutil/rust-psutil"
readme = "README.md"
license = "MIT"
edition = "2018"

[dependencies]
cfg-if = "0.1.10"
nix = "0.17.0"
once_cell = "1.2.0"

glob = { version = "0.3.0", optional = true }
num_cpus = { version = "1.11.1", optional = true }
platforms = { version = "0.2.1", optional = true }
signal = { version = "0.7.0", optional = true }
snafu = { version = "0.6.0", optional = true }
unescape  = { version = "0.1.0", optional = true }

[target.'cfg(target_os = "macos")'.dependencies]
mach = { version = "0.3.2", optional = true }
darwin-libproc = { version = "0.1.1", optional = true }

[features]
default = ["cpu", "disk", "host", "memory", "network", "process", "sensors"]

# Modules
cpu = ["num_cpus", "mach"]
disk = ["unescape"]
host = ["platforms"]
memory = ["mach"]
network = []
process = ["snafu", "memory", "darwin-libproc", "mach"]
sensors = ["glob"]

[dev-dependencies]
float-cmp = "0.6.0"
