[package]
name = "psutil"
version = "5.3.0"
authors = [
	"Caleb Bassi <calebjbassi@gmail.com>",
	"Rob Day <rkd@rkd.me.uk>",
	"Sam Clements <sam@borntyping.co.uk>",
]
description = "Process and system monitoring library"
repository = "https://github.com/rust-psutil/rust-psutil"
readme = "README.md"
license = "MIT"
edition = "2018"

[dependencies]
cfg-if = "1.0.0"
nix = { version = "0.30.0", default-features = false, features = ["feature", "fs", "signal"] }
once_cell = "1.2.0"
thiserror = "2.0.8"

derive_more = { version = "1.0.0", optional = true, default-features = false, features = ["add", "sum"]}
glob = { version = "0.3.0", optional = true }
num_cpus = { version = "1.11.1", optional = true }
platforms = { version = "3.5.0", optional = true }
renamed_serde = { version = "1.0", optional = true, package = "serde", features = ["derive"] }
signal = { version = "0.7.0", optional = true }
unescape = { version = "0.1.0", optional = true }

[target.'cfg(target_os = "macos")'.dependencies]
darwin-libproc = { version = "0.2.0", optional = true }
mach2 = { version = "0.4.1", optional = true }

[features]
default = ["cpu", "disk", "host", "memory", "network", "process", "sensors"]
serde = ["renamed_serde", "platforms/serde"]

# Modules
cpu = ["mach2", "num_cpus"]
disk = ["derive_more", "unescape"]
host = ["platforms"]
memory = ["mach2"]
network = ["derive_more"]
process = ["darwin-libproc", "mach2", "memory"]
sensors = ["glob"]

[dev-dependencies]
float-cmp = "0.6.0"
